crates/bsql/tests/compile_fail/empty_sql.stderr
error: empty SQL query
 --> tests/compile_fail/empty_sql.rs:2:13
  |
2 |     let _ = bsql::query!("");
  |             ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
